<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_bg"
    tools:context=".Reminders">

    <TextView
        android:id="@+id/lblAddReminderHeader"
        android:textColor="@color/headerColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/lblAddReminderHeader"
        android:fontFamily="@font/bold"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="379dp"
        android:layout_height="486dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/add_reminder_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAddReminderHeader"
        android:contentDescription="@string/container_content_description" />

    <EditText
        android:id="@+id/etReminderName"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Reminder Name"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="119dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="mm/dd/yyyy"
        android:inputType="date"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReminderName" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="00:00:00"
        android:inputType="time"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toEndOf="@+id/etDate"
        app:layout_constraintTop_toBottomOf="@+id/etReminderName" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDescription"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="276dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textSize="17sp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDescription" />

    <ImageButton
        android:id="@+id/btnAddReminderBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="btnHandler"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/reminders_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/back_button" />

    <Button
        android:onClick="btnHandler"
        android:id="@+id/btnSaveReminder"
        android:layout_width="130dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnSaveReminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toEndOf="@+id/btnAddReminderBack"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>