<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_bg"
    tools:context=".Reminders">

    <TextView
        android:id="@+id/lblRemindersHeader"
        android:textColor="@color/headerColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/lblRemindersHeader"
        android:fontFamily="@font/bold"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="btnHandler"
        android:contentDescription="@string/back_button"
        android:id="@+id/btnRemindersBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/reminders_back"
        tools:ignore="SpeakableTextPresentCheck" />

    <ListView
        android:id="@+id/listReminders"
        android:layout_width="383dp"
        android:layout_height="457dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRemindersBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRemindersHeader"
        app:layout_constraintVertical_bias="0.712" />

    <ImageButton
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="btnHandler"
        android:contentDescription="@string/add_button"
        android:id="@+id/btnRemindersAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnRemindersBack"
        app:layout_constraintTop_toBottomOf="@+id/listReminders"
        app:layout_constraintVertical_bias="0.37"
        app:srcCompat="@drawable/add_reminders"
        tools:ignore="OnClick,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>